--- a/src/app/categories/categories.component.css
+++ b/src/app/categories/categories.component.css
@@ -33,3 +33,11 @@
 .card-title {
     width: 100%;
 }
+
+.bottom {
+    width: 100vw;
+    position: fixed;
+    bottom: 0;
+    align-items: center;
+
+}
