--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -17,6 +17,10 @@
                 <h5 class="card-title">{{category.name}}</h5>
             </div>
         </div>
+
+        <div class="parent bottom" style="flex-direction: column;">
+            <p>Made By <a href="https://twitter.com/sarvesh_is_wow">Sarvesh Kedia</a></p>
+        </div>
     </div>
 
 </body>
