added an add categories button

--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -27,6 +27,10 @@
         </div>
     </div>
 
+    <button type="button" class="btn btn-circle shadow"><i class="bi bi-plus-lg" style="font-size: 64px; position: absolute; bottom: 1vw; right: 4vw; color: white;"></i></button>
+
+
+
 </body>
 </html>
 
