--- a/src/app/categories/categories.component.css
+++ b/src/app/categories/categories.component.css
@@ -41,3 +41,18 @@
     align-items: center;
 
 }
+
+
+.btn-circle {
+    width: 100px;
+    height: 100px;
+    padding: 13px 18px;
+    border-radius: 50px;
+    font-size: 15px;
+    text-align: center;
+    background-color: rgba(255, 135, 2, 1);
+    position: absolute;
+    right:    10vw;
+    bottom:   20vw;
+
+}
